Bug 824347: Remove assertion that became incorrect when inlining functions with arguments object landed, r=nbp