js/src/jit-test/tests/ion/bug824347.js
@@ -1,0 +1,11 @@
+function g() { }
+function f(b) {
+    var test;
+    if (b) {
+        g.apply(null, arguments);
+        var test = 1;
+    } else {
+        f(false);
+    }
+}
+f(true);
